--- a/sass/style.scss
+++ b/sass/style.scss
@@ -66,3 +66,66 @@ header a {
   -webkit-transform: rotate(-45deg) translate(8px, -8px);
   transform: rotate(-45deg) translate(8px, -8px);
 }
+
+
+/* Pop-up Test */
+
+// .popup {
+//   position: relative;
+//   display: inline-block;
+//   cursor: pointer;
+//   -webkit-user-select: none;
+//   -moz-user-select: none;
+//   -ms-user-select: none;
+//   user-select: none;
+// }
+
+    /* The actual popup */
+    // .popup .popuptext {
+    //   visibility: hidden;
+    //   width: 160px;
+    //   background-color: #555;
+    //   color: #fff;
+    //   text-align: center;
+    //   border-radius: 6px;
+    //   padding: 8px 0;
+    //   position: absolute;
+    //   z-index: 1;
+    //   /*bottom: 125%;*/
+    //   top: 160%;
+    //   left: 50%;
+    //   margin-left: -80px;
+    // }
+
+    /* Popup arrow */
+    // .popup .popuptext::before {
+    //   content: "";
+    //   position: absolute;
+    //   top: -28%;
+    //   left: 50%;
+    //   margin-left: -5px;
+    //   border-width: 5px;
+    //   border-style: solid;
+    //   border-color: #555 transparent transparent transparent;
+    //   transform: rotate(180deg);
+    // }
+
+    /* Toggle this class - hide and show the popup */
+    // .popup .show {
+    //   visibility: visible;
+    //   -webkit-animation: fadeIn 1s;
+    //   animation: fadeIn 1s;
+    // }
+
+    /* Add animation (fade in the popup) */
+    // @-webkit-keyframes fadeIn {
+    //   from {opacity: 0;} 
+    //   to {opacity: 1;}
+    // }
+
+    // @keyframes fadeIn {
+    //   from {opacity: 0;}
+    //   to {opacity:1 ;}
+    // }
+
+/* Pop-up Test */
