--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,9 +24,11 @@
   color: var(--font-clr-two);
 }
 
+/* Header Part */
+
 .header {
   width: 100%;
-  height: 800px;
+  height: 600px;
   background-image: linear-gradient(
     to bottom right,
     var(--clr-pink-one),
@@ -64,13 +66,6 @@
     }
   }
 }
-
-// .navigation {
-//   a,
-//   div {
-//     margin-left: 30px;
-//   }
-// }
 
 /* Menu Button*/
 .header__top__menu {
@@ -185,3 +180,85 @@
 }
 
 /* Pop-up Test */
+
+/* End Header Part */
+
+/***********************************************/
+
+/* Main Part */
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--font-clr-two);
+
+  &__container {
+    width: 80%;
+    display: flex;
+
+    &__wrapper {
+      width: 25%;
+      height: 400px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      margin: 0px 20px;
+
+      &--icon {
+        i {
+          background-color: var(--clr-bckgrd);
+          border-radius: 50%;
+          width: 75px;
+          height: 75px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 35px;
+          color: var(--clr-cta);
+        }
+      }
+
+      &--title {
+        color: var(--font-clr-one);
+        text-transform: uppercase;
+        font-weight: 400;
+        letter-spacing: 1.5px;
+      }
+
+      &--text {
+        color: var(--font-clr-three);
+      }
+
+      &--button {
+        background-color: var(--clr-cta);
+        border-radius: 25px;
+        width: 130px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 15px 20px;
+      }
+    }
+
+    &__wrapper:last-child {
+      background-color: var(--font-clr-three);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__wrapper--icon:last-child i {
+      background-color: var(--font-clr-two);
+    }
+  }
+
+  &__container__two {
+    width: 100%;
+    background-image: linear-gradient(
+      to top right,
+      var(--clr-blue-two),
+      var(--clr-pink-one)
+    );
+  }
+}
