--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@
 /***********************************************/
 /* Main Part */
 .main {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -175,8 +176,9 @@
   background-color: var(--font-clr-two);
 }
 .main__container {
-  width: 80%;
+  width: 70%;
   display: flex;
+  justify-content: space-around;
 }
 .main__container__wrapper {
   width: 25%;
@@ -184,7 +186,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin: 0px 20px;
+  padding: 0px 10px;
 }
 .main__container__wrapper--icon i {
   background-color: var(--clr-bckgrd);
@@ -220,13 +222,77 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 20%;
 }
 .main__container__wrapper--icon:last-child i {
   background-color: var(--font-clr-two);
 }
-.main__container__two {
+
+.main__two {
   width: 100%;
   background-image: linear-gradient(to top right, var(--clr-blue-two), var(--clr-pink-one));
+  display: flex;
+  justify-content: center;
+}
+.main__two__container {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.main__two__container__left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 77.6%;
+}
+.main__two__container__left__header {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 30px;
+}
+.main__two__container__left__header--title {
+  margin: 10px 0px;
+  font-weight: 400;
+}
+.main__two__container__left__body {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.main__two__container__left__body--img {
+  width: 70%;
+}
+.main__two__container__left__body--description {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.main__two__container__left .description--block--title {
+  margin-bottom: 20px;
+}
+.main__two__container__left .description--block--title span {
+  margin-left: 20px;
+}
+.main__two__container__right {
+  background-color: var(--font-clr-three);
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  opacity: 0.5;
+}
+.main__two__container__right--block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main__two__container__right--block--number {
+  margin-bottom: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
